--- a/src/app/query/query-form/query-form.component.scss
+++ b/src/app/query/query-form/query-form.component.scss
@@ -2,6 +2,7 @@ mat-card {
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 0px;
+  background-color: rgb(231, 239, 254);
 }
 
 .checkbox-margin {
