--- a/src/app/shared/repository-list/repository-list.component.scss
+++ b/src/app/shared/repository-list/repository-list.component.scss
@@ -23,3 +23,18 @@
   margin-top: 3px;
   margin-left: 5px;
 }
+
+mat-card {
+  margin-bottom: 1rem;
+}
+
+mat-radio-button {
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+mat-paginator {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 4px;
+}
