--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
 
 .content {
   position: absolute;
-  top: 55px;
+  top: 54px;
   left: 0px;
   right: 0px;
   bottom: 0px;
@@ -25,4 +25,8 @@
 img {
   margin-right: 0.7rem;
   height: 2rem;
+}
+
+.app {
+  background-color: rgb(238, 238, 238);
 }
