--- a/src/app/history/history.component.scss
+++ b/src/app/history/history.component.scss
@@ -7,18 +7,20 @@
   background: #eee;
 }
 
-.message {
-  background-color: rgb(218, 218, 218);
-  text-align: center;
-  display: inline-block;
-  align-items: center;
-  vertical-align: middle;
-}
-
 .scroll {
   overflow-y: scroll;
 }
 
 mat-sidenav-content {
   overflow-y: scroll;
+}
+
+.aligned-with-icon {
+  position: absolute;
+  margin-top: 3px;
+  margin-left: 5px;
+}
+
+mat-sidenav {
+  width: 200px;
 }
