--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,13 @@
 <div class="app">
   <mat-toolbar class="toolbar" color="primary">
-    <div class="row">
-      <div class="col">
+    <div class="row row-cols-auto">
+      <div>
         <img src="../assets/github-circle-white-transparent.svg">
         <span>Query Portal</span>
       </div>
-      <div class="col">
+      <div>
         <a mat-button routerLink="query" routerLinkActive="active" class="hover">Query</a>
         <a mat-button routerLink="history" routerLinkActive="active" class="hover">History</a>
-      </div>
-      <div class="col">
         <button mat-icon-button (click)="toggleSidebar()">
           <mat-icon>reorder</mat-icon>
         </button>
